deploy/qa/identity-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-api
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-api
  template:
    metadata:
      labels:
        app: identity-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - identity-api
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: identity-api
        image: fcavarzare/projeto-reserva-identity-api:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: identity-api-service
  namespace: qa
spec:
  selector:
    app: identity-api
  ports:
  - port: 80
    targetPort: 8080
